[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Audio/UI/menu_click.mp3" type="AudioStream" id=2]
[ext_resource path="res://Audio/UI/menu_hover.mp3" type="AudioStream" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.5
margin_top = -124.0
margin_right = 32.5

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Start"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Controls"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
text = "Quit"

[node name="MainMenuTheme" type="AudioStreamPlayer2D" parent="."]

[node name="MenuClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 13.11
panning_strength = 0.0
bus = "UI"

[node name="MenuHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
panning_strength = 0.0
bus = "UI"

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Controls" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
